--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,22 @@
         android:theme="@style/Theme.Assessment4"
         tools:targetApi="31">
         <activity
-            android:name=".LocationCity"
+            android:name=".AddNewLocations"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LocationCity"
+            android:exported="true">
+        </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
-
         </activity>
     </application>
 
